# docs/swagger.json
@@ -9,7 +9,7 @@
     "host": "localhost:8000",
     "basePath": "/",
     "paths": {
-        "/authorize": {
+        "/api/v1/authz/check": {
             "get": {
                 "description": "Token JWT ilə doğrulanır. İstəyə əsasən blacklist və RBAC permission da yoxlanır.",
                 "consumes": [
@@ -32,21 +32,22 @@
                     },
                     {
                         "type": "boolean",
-                        "description": "JWT imzası yoxlansın? (default: true)",
+                        "default": true,
+                        "description": "JWT yoxlanılsın?",
                         "name": "check_jwt",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "boolean",
-                        "description": "Token blacklistedir? (default: true)",
+                        "default": true,
+                        "description": "Blacklist yoxlanılsın?",
                         "name": "check_blacklist",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "boolean",
-                        "description": "RBAC permission yoxlansın? (default: false)",
+                        "default": false,
+                        "description": "RBAC yoxlanılsın?",
                         "name": "check_rbac",
                         "in": "query"
                     },
@@ -85,7 +86,7 @@
                 }
             }
         },
-        "/logout": {
+        "/api/v1/authz/logout": {
             "post": {
                 "description": "İstifadəçi tokenini blackliste əlavə edir (logout əməliyyatı).",
                 "consumes": [
@@ -123,7 +124,7 @@
                 }
             }
         },
-        "/logout-all": {
+        "/api/v1/authz/logout-all": {
             "post": {
                 "description": "Verilən `user_id`-yə aid olan bütün JWT-lərin JTI-lərini blackliste əlavə edir və bütün instansiyalara yayır.",
                 "consumes": [
@@ -163,7 +164,7 @@
                 }
             }
         },
-        "/permissions": {
+        "/api/v1/authz/permissions": {
             "get": {
                 "produces": [
                     "application/json"
@@ -234,7 +235,7 @@
                 }
             }
         },
-        "/permissions-with-roles": {
+        "/api/v1/authz/permissions/permissions-with-roles": {
             "get": {
                 "produces": [
                     "application/json"
@@ -262,7 +263,7 @@
                 }
             }
         },
-        "/permissions/{id}": {
+        "/api/v1/authz/permissions/{id}": {
             "put": {
                 "consumes": [
                     "application/json"
@@ -349,7 +350,7 @@
                 }
             }
         },
-        "/permissions/{id}/roles": {
+        "/api/v1/authz/permissions/{id}/roles": {
             "get": {
                 "produces": [
                     "application/json"
@@ -392,7 +393,7 @@
                 }
             }
         },
-        "/roles": {
+        "/api/v1/authz/roles": {
             "get": {
                 "produces": [
                     "application/json"
@@ -463,7 +464,7 @@
                 }
             }
         },
-        "/roles-with-permissions": {
+        "/api/v1/authz/roles/roles-with-permissions": {
             "get": {
                 "produces": [
                     "application/json"
@@ -491,7 +492,7 @@
                 }
             }
         },
-        "/roles/{id}": {
+        "/api/v1/authz/roles/{id}": {
             "put": {
                 "consumes": [
                     "application/json"
@@ -578,7 +579,7 @@
                 }
             }
         },
-        "/roles/{id}/permissions": {
+        "/api/v1/authz/roles/{id}/permissions": {
             "get": {
                 "produces": [
                     "application/json"
@@ -621,7 +622,7 @@
                 }
             }
         },
-        "/roles/{roleID}/permissions/{permID}": {
+        "/api/v1/authz/roles/{roleID}/permissions/{permID}": {
             "post": {
                 "tags": [
                     "Role-Permission"
